--- a/python_bindings/pyproject.toml
+++ b/python_bindings/pyproject.toml
@@ -9,13 +9,17 @@ build-backend = "hatchling.build"
 
 [project]
 name = "pbi_translation"
-version = "1.0.0"
+version = "1.0.1"
 dependencies = []
 description = "Converts PowerBI frontend Prototype Queries to DAX queries that can be understood by the SSAS backend"
 readme = "README.md"
 
 [project.optional-dependencies]
-dev = ["pre-commit>=3.8.0"]
+dev = [
+    "pre-commit>=3.8.0",
+    "build>=1.2.2",
+    "pythonnet"
+]
 
 [tool.doc8]
 max-line-length = 120
