--- a/python_bindings/pyproject.toml
+++ b/python_bindings/pyproject.toml
@@ -21,3 +21,6 @@ dev = ["pre-commit>=3.8.0", "build>=1.2.2", "pythonnet"]
 [tool.doc8]
 max-line-length = 120
 file-encoding = "utf8"
+
+[tool.hatch.version]
+path = "pbi_translation/__init__.py"
