--- a/python_bindings/pyproject.toml
+++ b/python_bindings/pyproject.toml
@@ -13,11 +13,20 @@ description = "Converts PowerBI frontend Prototype Queries to DAX queries that c
 readme = "README.md"
 requires-python = ">=3.11.0"
 dynamic = ["version"]
-dependencies = []
+dependencies = [
+  "pythonnet>=3.0.5",
+]
 
 [project.optional-dependencies]
-dev = ["pre-commit>=3.8.0", "build>=1.2.2", "pythonnet"]
-
+dev = [
+  "pre-commit>=3.8.0",
+  "build>=1.2.2",
+]
+docs = [
+  "mkdocs>=1.6.1",
+  "mkdocs-material>=9.6.16",
+  "mkdocstrings-python>=0.30.0",
+]
 [tool.doc8]
 max-line-length = 120
 file-encoding = "utf8"
