--- a/python_bindings/docs/mkdocs.yml
+++ b/python_bindings/docs/mkdocs.yml
@@ -1,5 +1,11 @@
 site_name: "pbi_prototype_query_translation Documentation"
 
+nav:
+  - Home: index.md
+  - API Reference:
+      - Python API: api.md
+      - C# API: c_sharp_api.md
+
 theme:
   name: "material"
   features:
