--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -6,7 +6,7 @@ on:
     branches:
       - main
     paths:
-      - 'docs/**'
+      - 'python_bindings/docs/**'
       - '.github/workflows/deploy-docs.yml'
 
 jobs:
