--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -74,6 +74,13 @@ jobs:
         with:
           python-version: '3.x'
 
+      - name: Get DDL zip file
+        run: |
+            wget https://github.com/douglassimonsen/pbi_prototype_query_translation/releases/download/v1.0.3/libs.zip -O my_application.zip
+
+      - name: Unzip DDL file
+        run: unzip my_application.zip -d python_bindings/pbi_prototype_query_translation
+
       - name: Build package (sdist and wheel)
         working-directory: ./python_bindings
         run: |
