--- a/python_bindings/pyproject.toml
+++ b/python_bindings/pyproject.toml
@@ -27,6 +27,10 @@ docs = [
   "mkdocs-material>=9.6.16",
   "mkdocstrings-python>=0.30.0",
 ]
+[project.urls]
+Homepage = "https://github.com/douglassimonsen/pbi_prototype_query_translation"
+Documentation = "https://douglassimonsen.github.io/pbi_prototype_query_translation/"
+
 [tool.doc8]
 max-line-length = 120
 file-encoding = "utf8"
